--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,12 @@ body {
 .myContainer {
   @apply container w-full mx-auto lg:px-8 md:px-6 px-5;
 }
+
+.wrap {
+    flex-direction: row;
+}
+
+.child1 {
+    flex: 2;
+    background: red;
+}
