--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 
 :root {
   --primary: #F78127;
-  --secondary: #1A1A1A;
+  --secondary: #1a1a1ab4;
   --bodyColor: #000000;
  
 }
@@ -25,11 +25,3 @@ body {
   @apply container w-full mx-auto lg:px-8 md:px-6 px-5;
 }
 
-.wrap {
-    flex-direction: row;
-}
-
-.child1 {
-    flex: 2;
-    background: red;
-}
