--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ body {
   background: rgb(15, 15, 15);
 }
 
-.sb-example-3 .search__input {
+.search__wrap .search__input {
   width: 100%;
   padding: 8px 30px;
   background-color: transparent;
@@ -49,14 +49,12 @@ body {
   transform-style: preserve-3d;
 }
 
-.sb-example-3 .search__input::placeholder {
+.search__wrap .search__input::placeholder {
   color: rgba(87, 87, 86, 0.8);
   letter-spacing: 1.5px;
   margin: 0 20px;
 }
 
-.sb-example-3 .search__input:hover,
 .search__input:focus {
   outline: 0;
-  /* background-position: 100% center; */
 }
