--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,10 @@ body {
   background: var(--bodyColor);
 }
 
+p {
+  color: #bababa;
+}
+
 .myContainer {
   @apply container w-full mx-auto lg:px-8 md:px-6 px-5;
 }
