--- a/src/index.css
+++ b/src/index.css
@@ -39,6 +39,15 @@ p {
   background: rgb(15, 15, 15);
 }
 
+ul li::before {
+  content: "\2022";
+  color: red;
+  font-weight: bold;
+  display: inline-block; 
+  width: 1em;
+  margin-left: -1em;
+}
+
 .search__wrap .search__input {
   width: 100%;
   padding: 8px 30px;
