--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,9 @@ ul li::before {
   color: red;
   font-weight: bold;
   display: inline-block; 
-  width: 1em;
-  margin-left: -1em;
+  width: 3em;
+  height: 3em;
+  margin-right: -2em;
 }
 
 .search__wrap .search__input {
