--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,31 @@ p {
   @apply container w-full mx-auto lg:px-8 md:px-6 px-5;
 }
 
-/* general title */
+/* BACK TO TOP */
+.scroll-to-top {
+  bottom: 13px;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  z-index: 200;
+}
+
+.scroll-to-top .icon2 {
+  margin-top: 10px;
+  color: wheat !important;
+  animation: scrollTop 0.5s alternate ease infinite;
+}
+
+@keyframes scrollTop {
+  from {
+    transform: translateY(2px);
+  }
+  to {
+    transform: translateY(-1px);
+  }
+}
+
+/*== general title ==*/
 .title {
   @apply text-primary text-2xl md:text-6xl font-extrabold pb-5;
 }
